# phase-client

./: .gitignore  README.md  README.zh-Hans.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  setup.yml  update-lockfile.yml
docs/: backend-changes-required.md
docs/plans/: design.md
scripts/: README.md  setup-android-signing.cmd
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  crypto.rs  lib.rs  main.rs  totp.rs  vault.rs
src/components/: SpotlightSearch.tsx
src/components/auth/: QrScanner.tsx  SetupPage.tsx
src/components/layout/: AppShell.tsx
src/components/security/: HardwareKeyManager.tsx  PasswordBreachMonitor.tsx
src/components/settings/: SettingsPage.tsx
src/components/tokens/: AddTokenDialog.tsx  EditTokenDialog.tsx  TokenCard.tsx  TokenListPage.tsx
src/lib/: biometric.ts  platform.ts  tauri.ts  webauthn.ts
src/store/: appStore.ts
src/types/: index.ts
