[package]
name = "phase-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "phase_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
hkdf = "0.12"
aes-gcm = "0.10"
base32 = "0.4"
base64 = { version = "0.22", features = ["alloc"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "time"] }

# Utils
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
once_cell = "1"
hex = "0.4"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
window-vibrancy = "0.5.2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
